Archive2/ec/cbc944f77e012d/output
main.cpp:4:12: error: use of undeclared identifier 'Å'
    return Å + Å;
           ^
main.cpp:4:17: error: use of undeclared identifier 'Å'
    return Å + Å;
               ^
2 errors generated.
